--- a/config/database.yml
+++ b/config/database.yml
@@ -1,7 +1,7 @@
 development:
   adapter: mysql2
   encoding: utf8
-  database: mysql
+  database: tenant_db
   username: root
   password: 7vals
   pool: 5
